--- a/5-数据可视化.ipynb
+++ b/5-数据可视化.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"/Users/zhaozihao/Desktop/简洁.csv\")"
+    "data = pd.read_csv(\"简洁.csv\")"
    ]
   },
   {
@@ -19,25 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9932 entries, 0 to 9931\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column              Non-Null Count  Dtype  \n",
-      "---  ------              --------------  -----  \n",
-      " 0   bookID              9932 non-null   int64  \n",
-      " 1   title               9932 non-null   object \n",
-      " 2   authors             9932 non-null   object \n",
-      " 3   average_rating      9932 non-null   float64\n",
-      " 4   isbn                9932 non-null   object \n",
-      " 5   isbn13              9932 non-null   float64\n",
-      " 6   language_code       9932 non-null   object \n",
-      " 7   num_pages           9932 non-null   int64  \n",
-      " 8   ratings_count       9932 non-null   int64  \n",
-      " 9   text_reviews_count  9932 non-null   int64  \n",
-      " 10  year                9932 non-null   int64  \n",
-      " 11  publisher           9932 non-null   object \n",
-      "dtypes: float64(2), int64(5), object(5)\n",
-      "memory usage: 931.2+ KB\n"
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 9932 entries, 0 to 9931\nData columns (total 12 columns):\nbookID                9932 non-null int64\ntitle                 9932 non-null object\nauthors               9932 non-null object\naverage_rating        9932 non-null float64\nisbn                  9932 non-null object\nisbn13                9932 non-null float64\nlanguage_code         9932 non-null object\nnum_pages             9932 non-null int64\nratings_count         9932 non-null int64\ntext_reviews_count    9932 non-null int64\nyear                  9932 non-null int64\npublisher             9932 non-null object\ndtypes: float64(2), int64(5), object(5)\nmemory usage: 931.2+ KB\n"
      ]
     }
    ],
